# Behavioral_Finance_Project

./: .gitignore  README.md  pyproject.toml
data/: baseline_sample.xlsx  data.csv  data.pkl
notebooks/: 01_analysis.html  01_analysis.qmd
reports/research_proposal/latex_code/: main.tex  references.bib
slides/presentation/latex_code/: main.tex
src/: __init__.py  clean_xlsx.py
